--- a/company_page.html
+++ b/company_page.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>高工开发</title>
+  <title>WEB前端开发工程师</title>
   <link rel="stylesheet" href="index.css" />
 </head>
 
